Revision history for WWW::Mechanize

{{$NEXT}}
    [ENHANCEMENTS]
    - Add autocheck() to enable or disable autochecking at run time in
      addition to setting it at object creation (GH#232) (Julien Fiegehenn)
    - mech_dump now errors appropriately when it cannot open a URL or file
      instead of claiming it has the wrong MIME type (GH#292) (Julien Fiegehenn)

2.13      2022-07-29 09:44:46Z
    [ENHANCEMENTS]
    - mech_dump now treats all local files like HTML regardless of what it
      thinks their content types are (GH#63) (Julien Fiegehenn)
    - We now consistently use our own die() method and therefore the onerror
      handler wherever possible (GH#80) (Julien Fiegehenn)

    [TESTS]
    - Add tests for field() when working on a <textarea> (GH#220) (Julien
      Fiegehenn)

2.12      2022-07-20 06:45:40Z

    [ENHANCEMENTS]
    - form_name(), form_id(), form_with() and form_with_fields() can now all
      return the nth instance of a form instead of always returning the first
      instance (GH#110) (Jeff Culverhouse and Julien Fiegehenn)

    [TESTS]
    - Tests using a local temporary server are now safe to use with HTTP/1.1
      and keep-alive (GH #14) (Stanislaw Pusep and Julien Fiegehenn)
    - We now use Test::Pod::LinkCheck to ensure there are no broken links in
      our documentation (GH #337) (Julien Fiegehenn)

2.11      2022-07-17 17:25:39Z

    [FIXED]
    - tick() can now handle checkboxes without a value (GH#331) (Jordan M Adler
      and Julien Fiegehenn)

    [ENHANCEMENTS]
    - set_fields() and submit_form(with_fields => ...) can now set multiple
      choice inputs (e.g. select and radio) to the nth value (GH29) (Alastair
      Douglas and Julien Fiegehenn)

2.10      2022-07-04 21:06:13Z

    [ENHANCEMENTS]
    - Added form_action($action) to look up forms by regex matching $action (GH#19)
      (Mark Leighton Fisher and Julien Fiegehenn)

    [DOCUMENTATION]