@@ -1,6 +1,7 @@
 use strict;
 use warnings;
 use Test::More;
+use Test::Exception;
 use WWW::Mechanize;
 use URI::file;
 
@@ -8,9 +9,19 @@ my $file     = 't/file_upload.html';
 my $filename = 'the_file_upload.html';
 my $mc = WWW::Mechanize->new;
 my $uri = URI::file->new_abs( 't/file_upload.html' )->as_string;
-my ($form, $input);
+my ($form, $input, $as_string);
 
 # &field
+$mc->get( $uri );
+$mc->field( 'document', [$file] );
+($form) = $mc->forms;
+$as_string = $form->make_request->as_string;
+like( $as_string, qr! filename="$file" !x,
+      q/$mc->field( 'document', [$file] )/ );
+like(
+    $as_string, qr!<form method="post" enctype="multipart/form-data"!,
+    '... and the file was sent'
+);
 
 $mc->get( $uri );
 $mc->field( 'document', [$file, $filename] );
@@ -19,12 +30,29 @@ like( $form->make_request->as_string, qr! filename="$filename" !x,
       q/$mc->field( 'document', [$file, $filename] )/ );
 
 $mc->get( $uri );
-$mc->field( 'document', [$file, $filename, Content => 'content'] );
+$mc->field( 'document', [$file, $filename, Content => 'changed content'] );
 ($form) = $mc->forms;
-like( $form->make_request->as_string, qr! filename="$filename" !x,
-      q/$mc->field( 'document', [$file, $filename, Content => 'content'] )/ );
+$as_string = $form->make_request->as_string;
+like( $as_string, qr! filename="$filename" !x,
+      q/$mc->field( 'document', [$file, $filename, Content => 'changed content'] )/ );
+like(
+    $as_string, qr!changed content!,
+    '... and the Content header was sent instead of the file'
+);
+
 
 # &set_fields
+
+$mc->get( $uri );
+$mc->set_fields( 'document' => [$file] );
+($form) = $mc->forms;
+$as_string = $form->make_request->as_string;
+like( $as_string, qr! filename="$file" !x,
+      q/$mc->set_fields( 'document', [$file] )/ );
+like(
+    $as_string, qr!<form method="post" enctype="multipart/form-data"!,
+    '... and the file was sent'
+);
 
 $mc->get( $uri );
 $mc->set_fields( 'document' => [ $file, $filename ] );
@@ -33,10 +61,15 @@ like( $form->make_request->as_string, qr! filename="$filename" !x,
       q/$mc->set_fields( 'document' => [ $file, $filename ] )/ );
 
 $mc->get( $uri );
-$mc->set_fields( 'document' => [ $file, $filename, Content => 'content' ] );
+$mc->set_fields( 'document' => [ $file, $filename, Content => 'my content' ] );
 ($form) = $mc->forms;
-like( $form->make_request->as_string, qr! filename="$filename" !x,
-      q/$mc->set_fields( 'document' => [ $file, $filename, Content => 'content' ] )/ );
+$as_string = $form->make_request->as_string;
+like( $as_string, qr! filename="$filename" !x,
+      q/$mc->set_fields( 'document' => [ $file, $filename, Content => 'my content' ] )/ );
+like(
+    $as_string, qr!my content!,
+    '... and the Content header was sent instead of the file'
+);
 
 $mc->get( $uri );
 $mc->set_fields( 'document' => [[ $file, $filename ], 1] );
@@ -50,5 +83,22 @@ $mc->set_fields
 ($form) = $mc->forms;
 like( $form->make_request->as_string, qr! filename="$filename" !x,
       q/$mc->set_fields( 'document' => [[ $file, $filename, Content => 'content' ], 1] )/ );
+
+$mc->get( $uri );
+$mc->set_fields
+  ( 'document' => [[ undef, $filename, Content => 'content' ], 1] );
+($form) = $mc->forms;
+$as_string = $form->make_request->as_string;
+like( $as_string, qr! filename="$filename" !x,
+      q/$mc->set_fields( 'document' => [[ undef, $filename, Content => 'content' ], 1] )/ );
+
+# field does not exist
+$mc->get( $uri );
+lives_ok { $mc->set_fields( 'does_not_exist' => [ [$file], 1 ] ) }
+'setting a field that does not exist lives';
+($form) = $mc->forms;
+$as_string = $form->make_request->as_string;
+unlike( $as_string, qr! filename="$file" !x,
+      q/$mc->set_fields( 'does_not_exist' => [ [$file], 1 ] )/ );
 
 done_testing;
